--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "odieabotnet",
-  "version": "1.0.0",
-  "description": "api control of house",
-  "main": "index.js",
+  "name": "OdieBotNet",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kenygaar/OdieBotNet.git"
-  },
-  "author": "Keith Nygaard, Chris Vincent",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kenygaar/OdieBotNet/issues"
+    "start": "node ./bin/www"
   },
   "homepage": "https://github.com/kenygaar/OdieBotNet#readme",
   "dependencies": {
-    "express": "^4.13.4",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "hbs": "~3.1.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0",
     "nodemailer": "^2.4.2"
   }
 }
