--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
+    "mongodb": "^2.1.21",
+    "mongoose": "^4.4.20",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "nodemailer": "^2.4.2"
+    "nodemailer": "^2.4.2",
+    "serve-favicon": "~2.3.0"
   }
 }
