--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "homepage": "https://github.com/kenygaar/OdieBotNet#readme",
   "dependencies": {
     "body-parser": "~1.13.2",
+    "config": "^1.21.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
